[gd_scene load_steps=6 format=3 uid="uid://d4mhe8clsfr08"]

[ext_resource type="Script" path="res://Scripts/Interface/UserInterfaseLogic.gd" id="1_1h2w6"]
[ext_resource type="Theme" uid="uid://dc26lc4mqpmgp" path="res://Themes/MainTheme.theme" id="2_mc6i4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttdh3"]
bg_color = Color(0.6, 0.294118, 0.294118, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ye46"]
bg_color = Color(0.286275, 0.109804, 0.537255, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2um7"]
bg_color = Color(0.305882, 0.419608, 0.6, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="UserInterfase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1h2w6")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BarsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BarsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_mc6i4")

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/BarsContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_mc6i4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ttdh3")
value = 100.0
show_percentage = false

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/BarsContainer/HealthContainer"]
layout_mode = 2
text = "Состояние"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FuelContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_mc6i4")

[node name="FuelBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/BarsContainer/FuelContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_2ye46")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/BarsContainer/FuelContainer"]
layout_mode = 2
text = "Топливо"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BarsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_mc6i4")

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/BarsContainer/EnergyContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_o2um7")
value = 100.0
show_percentage = false

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/BarsContainer/EnergyContainer"]
layout_mode = 2
text = "Энергия"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsIconContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Main" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PauseMenuPanel" type="Panel" parent="MarginContainer/VBoxContainer/Main"]
visible = false
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mc6i4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Меню паузы"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Продолжить"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Главное меню"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Выйти из игры"

[node name="MesagePanel" type="Panel" parent="MarginContainer/VBoxContainer/Main"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mc6i4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Main/MesagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Сообщение"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="MessageOkButton" type="Button" parent="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Хорошо"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main/PauseMenuPanel/MarginContainer/VBoxContainer/Control/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main/MesagePanel/MarginContainer/VBoxContainer/MessageOkButton" to="." method="_on_message_ok_button_pressed"]
